# aegis-capstone

./: .env.example  .env.prod.example  .gitignore  AEGIS_README.md  Dockerfile.api  Dockerfile.runtime-cell  QUICKSTART.md  README.md  docker-compose.yml  fix-api-image-copy-scripts.sh  fix-governance-testdata-seed.sh  phase-dashboard-finops-refactor-local.sh  phase-dashboard-metrics-local-commit.sh  phase-dashboard-metrics-redeploy.sh  phase-keycloak-theme-local-commit.sh  phase-keycloak-theme-redeploy.sh  phase-testdata-local-commit.sh  phase-testdata-vm-seed.sh  pyproject.toml  run_aegis.sh
configs/: model_registry.yaml
deploy-edge/: Caddyfile  docker-compose.edge.yml
docs/: ARCHITECTURE.md  AUGMENTED_TEST_DATA.md  CAPABILITIES.md  CHANNELS_AND_REALTIME.md  HARDENING.md  MODEL_ROUTING.md  PRODUCTION_HARDENING.md  PRODUCTION_READINESS_REVIEW.md  Production_Readiness_Review_v1.0.0.docx  RBAC_AND_TENANCY.md  REQUIREMENTS_TRACEABILITY.md  STEP_BY_STEP_PRODUCTION_DEMO.md  TESTING_PROCEDURE.md  VALUES_CASCADE_SEED.md
exports/: README.md  seed-state.sql
frontend/: Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
scripts/: backup.sh  bootstrap.sh  configure-edge-keycloak.sh  demo-audit-telemetry.sh  demo-denials.sh  demo-happy-path.sh  edge-down.sh  edge-up.sh  generate-governance-traffic.py  get-token.sh  import-state.sh  install-edge.sh  migrate.sh  reembed.py  reset-governance-test-data.py  restore.sh  seed-docs.sh  seed-governance-test-data.py  seed-test-org.sh  setup-host.sh  sign-skill.py  (+2 more)
(+219 files in other folders)
