[project]
name = "aegis-platform"
version = "1.23.6"
description = "Production-mode governed multi-tenant enterprise agent platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-jose[cryptography]>=3.3.0",
  "cryptography>=42.0.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "psycopg-pool>=3.2.0",
  "pyyaml>=6.0.0",
  "docker>=7.1.0",
  "hvac>=2.3.0",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-exporter-otlp>=1.26.0",
  "opentelemetry-instrumentation-fastapi>=0.47b0",
  "opentelemetry-instrumentation-httpx>=0.47b0",
  "tenacity>=8.5.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "redis>=5.0.0",
  "pymongo>=4.6.0",
  "presidio-analyzer>=2.2.0",
  "presidio-anonymizer>=2.2.0",
  "spacy>=3.7.0",
  "sentence-transformers>=3.0.0",
  "python-docx>=1.1.0",
  "pypdf>=4.0.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "ruff>=0.5.0",
]

[project.scripts]
aegis = "aegis_fabric.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
